add colorcube on button push

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <button class="color-button" data-color="green">Green</button>
     <button class="color-button" data-color="blue">Blue</button>
 
-    <div class="container">
-    </div>
+    <button id="loadData">Load Some Data</button>
+
+    <div class="colorcontainer"></div>
   </body>
 </html>
